# simply_shooter

./: Cargo.toml
assets/: bullet.proj.ron  scene.scn.ron
assets/scene/: test.scn.ron
design/: design.txt
src/: enemy.rs  lib.rs  main.rs  player.rs  projectile.rs  velocity.rs
src/Weapon/: mod.rs
src/enemy/: enemey.rs  enemy.rs  mod.rs
src/mobcomponets/: mod.rs
src/player/: mod.rs  player_control.rs
