[package]
name = "simply_shooter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5.0"
bevy_asset_ron = "0.2.0"
heron = {version = "0.12.1", features = ["2d", "debug-2d"]}
oorandom = "11.1.3"
serde = "1.0.130"
